# tech_demo_python_package

./: .gitignore  README.md  all_metadata.json  all_report.json  check_db_api.py  check_db_owner.py  example_usage.py  fetch_all_metadata.py  fetch_complete_report.py  final_report.json  last_run.txt  last_run_db.txt  list_paths_output.txt  list_s3_buckets.py  metadata_output.json  metadata_reader-0.1.0-py3-none-any.whl  metadata_reader-0.2.0-py3-none-any.whl  pyproject.toml  requirements.txt  test_builder_usage.py  test_databricks.py  test_json_format.py  test_library_usage.py  test_multi_source.py  test_sharepoint.py  test_usage_live.py  test_usage_mock.py  test_usage_unified.py
metadata_reader/: __init__.py  config.py  factory.py
metadata_reader/connectors/: azure.py  base.py  databricks.py  s3.py  sharepoint.py
metadata_reader/models/: metadata.py
tests/: debug_iam.py  debug_s3.py  debug_s3_tags.py  demo_azure_structure.py  demo_s3_structure.py  test_connectors.py
usage_example/: run_metadata.py
